feat: implementa validação do perfil de acesso por tipo de usuário (RF03)